Add testing endpoint
